NLA Editor's 'Add Modifier' button is the wrong size on Retina Display #46958

Closed
opened 2015-12-12 06:02:10 +01:00 by Seth L. · 4 comments

System Information
OS X Yosemite 10.10.2
AMD Radeon R9 M295X 4096MB

Blender Version
Broken: 2.76b f337fea

In the NLA Editor the 'Add Modifier' button at the bottom of the Properties Panel is the wrong size on Retina Display Macs.

Appears to be the same type of bug as in this report , just in a different editor.
Probably no troubleshooting required for this one.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Add an object and assign some animation keyframes to it
  2. Open the NLA Editor
  3. Push the action down as a new NLA strip
  4. Open the Properties Panel and scroll down to see the button
**System Information** OS X Yosemite 10.10.2 AMD Radeon R9 M295X 4096MB **Blender Version** Broken: 2.76b f337fea In the NLA Editor the 'Add Modifier' button at the bottom of the Properties Panel is the wrong size on Retina Display Macs. Appears to be the same type of bug as in [this report ](https://developer.blender.org/T45453), just in a different editor. Probably no troubleshooting required for this one. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Add an object and assign some animation keyframes to it 2. Open the NLA Editor 3. Push the action down as a new NLA strip 4. Open the Properties Panel and scroll down to see the button
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

This issue was referenced by c1cfdc59a3

This issue was referenced by c1cfdc59a3f895b6b61dd55a48d18beff74adb7a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46958
No description provided.