Fix T46958: NLA Editor's 'Add Modifier' button is the wrong size on Retina Display